--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   http: ^0.13.6
   riverpod: ^2.3.7
   flutter_riverpod: ^2.3.7
+  firebase_auth: ^4.16.0
+  dotenv: ^4.2.0
+  flutter_dotenv: ^5.1.0
+  go_router: ^12.1.1
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+       - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
