--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dotenv: ^4.2.0
   flutter_dotenv: ^5.1.0
   go_router: ^12.1.1
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
