--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   go_router: ^12.1.1
   cloud_firestore: ^4.14.0
+  cloud_functions: ^4.6.0
 
 dev_dependencies:
   flutter_test:
